fixed the disaligned 'new todo' text box and the 'add' button in the todo list detail page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -173,7 +173,6 @@ input[type=text]#todo-item-detail
     font-size: 20px;
 
     width: 100%;
-    margin-top: 3%;
     margin-right: 0;
     margin-bottom: 3%;
     margin-left: 3%;
